changed blogs img behaviour on mobile/web, updated toTop btn style, removed email, phone and added linkedUrl in form, fixed textArea font and submitbutton on safari

--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -32,6 +32,7 @@
     background-color: rgb(41, 41, 41);
     letter-spacing: 0.1em;
     transition: all 0.3s linear;
+    font-family: 'Roboto Slab';
 }
 
 .contactForm > input::placeholder, textarea::placeholder {
@@ -45,6 +46,7 @@
 }
 
 .contactForm > input.submitform {
+    -webkit-appearance: none;
     min-height: 3em;
     font-weight: 400;
     background-color: var(--background);
